# fastapi_sh

./: README.md  pyproject.toml
app/: main.py
