[tool.poetry]
name = "fastapi_sh"
version = "0.1.0"
description = "Test app from FastAPI course"
authors = ["Vladimir Panferov <v3nseagal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.103.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
